@@ -1,3 +1,8 @@
+Travel::Status::DE::DBRIS 0.17 - Sun Nov 16 2025
+
+    * Journey: New accessors: admin_id, admin_ids, operator, operators
+    * New build dependencies: File::Slurp, JSON
+
 Travel::Status::DE::DBRIS 0.16 - Sat Nov 15 2025
 
     * Formation::Group: Add ICE L and LINT 41; fix CFL KISS detection
